feat: add sendbookmaredmovies route
